<resources>
    <string name="app_name">Freelance</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_location">Location</string>
    <string name="title_visits">Visits</string>
    <string name="title_messages">Messages</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Logout</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="token">Token</string>
    <string name="title_refresh">Refresh</string>
    <string name="title_visit_info">Info</string>
    <string name="title_visit_feedback">Feedback</string>
    <string name="territory">Territory :</string>
    <string name="brick">Brick :</string>
    <string name="due_date">Due date :</string>
    <string name="created_at">Created at :</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
</resources>
