<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile_24dp"
            android:title="@string/title_profile" />

        <item
            android:id="@+id/navigation_visits"
            android:icon="@drawable/ic_visit"
            android:title="@string/title_visits" />

        <item
            android:id="@+id/navigation_tasks"
            android:icon="@drawable/ic_task"
            android:title="@string/title_tasks" />

        <item
            android:id="@+id/navigation_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/title_messages" />

        <item
            android:id="@+id/navigation_location"
            android:icon="@drawable/ic_map_marker_24dp"
            android:title="@string/title_location" />

        <item
            android:id="@+id/navigation_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />

    </group>

</menu>