<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_visits">

    <fragment
        android:id="@+id/navigation_visits"
        android:name="com.example.freelance.ui.visits.VisitsFragment"
        android:label="@string/title_visits"
        tools:layout="@layout/fragment_visits" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.freelance.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.freelance.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
</navigation>